--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,4 @@
 /* natural box model */
-
-/* COLORS 
-#283891 - BLUE - rgb(40, 56, 145)
-#fff200 - YELLOW - rgb(255, 242, 0) */
 html {
     box-sizing: border-box;
   }
@@ -37,93 +33,57 @@ html {
     border: 0;
 }
 
-/* ETC  */
-/* IMAGE CAPTION  */
-figcaption{
-    font-size: 12px;
-}
-
-  /* general  */
-  .container {
-    max-width: 1250px;
-    display: block;
-    margin: 4.0em auto;
-    text-align: center;
-    padding: 2.0em 5.0em;
-  }
-
-  body{
-      margin: 0;
-      padding: 0;
-  }
-
-  h1, h2, h3, h4, h5, h6{
-    font-family: 'Merriweather', serif;
-  }
-
-  p, a{
-    font-family: 'Poppins', sans-serif;
-  }
-
-/* images */
-
-/* logo  */
-.logo {
-    height: 125px;
-    width: 125px;
-    margin: 2.0em auto 0 auto;
-}
-
-/* dividing images sections*/
-.uxImg{
-    height: 500px;
-    background-image: url('../images/general/ux.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
-
-.stock-img p{
-    font-size: 12px;
-}
-
-/* navgation bar */
-.navbar{
-    display: flex;
-    justify-content: center;
-    flex-flow: row nowrap;
-    margin: 3.0em 0;
+/* BODY  */
+body{
+    margin: 0;
+    padding: 0;
     background-color: white;
 }
 
-.navbar .icon{
-    color: black;
+/* FONTS  */
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Merriweather', serif;
 }
 
-/* links in navigation */
-.navbar a, .navbar .dropdown{
-    padding: 12px 16px;
+p, a, li, figcaption{
+  font-family: 'Poppins', sans-serif;
+}
+
+/* NAVIGATION  */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+.navbar{
+    display: flex;
+    justify-content: center;
+    margin: 3.0em 0;
+    background-color: white;
+  }
+  
+  .navbar .icon{
+    color: black;
+  }
+  
+  /* links in navigation */
+  .navbar a, .navbar .dropdown{
+    padding: 12px;
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
-    text-align: center;
     color: blue;
-}
-
-/* hovering over link  */
-.navbar a:hover, .navbar .dropdown p:hover{
+  }
+  
+  /* hovering over link  */
+  .navbar a:hover {
     color: #283891;
     cursor: pointer;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.navbar .icon{
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .navbar .icon {
     display: none;
   }
-
-/* The Overlay (background) */
-.overlay{
+  
+  /* The Overlay (background) */
+  .overlay {
     /* Height & width depends on how you want to reveal the overlay (see JS below) */
     height: 100%;
     width: 0;
@@ -168,29 +128,30 @@ figcaption{
     right: 45px;
     font-size: 60px;
   }
-
+  
   /* OVER LAY DROP DOWN  */
   .overlay-dropdown {
     overflow: hidden;
   }
-
-.overlay-dropdown-content {
+  
+  .overlay-dropdown-content {
     display: none;
     margin: 5px auto 0;
   }
-
+  
   .over-lay-dropdown-content a {
     float: none;
     display: block;
   }
-
-  /* The dropdown container */
-.dropdown {
+  
+   /* The dropdown container */
+   .dropdown {
+    /* float: left; */
     overflow: hidden;
   }
-
+  
   /* Dropdown content (hidden by default) */
-.dropdown-content {
+  .dropdown-content {
     margin-top: 5px;
     display: none;
     position: absolute;
@@ -199,16 +160,16 @@ figcaption{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-
+  
   /* Links inside the dropdown */
-.dropdown-content a {
+  .dropdown-content a {
     float: none;
     display: block;
     text-align: left;
   }
-
+  
   /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
+  .dropdown-content a:hover {
     background-color: #ddd;
   }
   
@@ -218,7 +179,7 @@ figcaption{
   }
 
   /* back to top button */
-  #backTopBtn {
+#backTopBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
@@ -242,15 +203,15 @@ figcaption{
     cursor: pointer;
   }
 
-  /* GENERAL */
-  .col{
-    flex: 1;
-    padding: 1em;
-    /* border: solid; */
+/* IMAGES  */
+/* logo  */
+.logo {
+    height: 125px;
+    width: 125px;
+    margin: 2.0em auto 0 auto;
 }
 
 /* header */
-
 #header{
     background-color: white;
     display: flex;
@@ -261,283 +222,22 @@ figcaption{
 }
 
 #header h1{
-    font-family: 'Merriweather', serif;
     font-weight: bold;
     letter-spacing: 4px;
     font-size: 96px;
     margin: 20px 0;
 }
 
-/* home */
-#home{
-    background-color: red;
-}
-
-#projects h2{
-    text-decoration: underline;
-    font-style: italic;
-}
-
-.proj-header{
-    margin-bottom: 4.0em;
-}
-
-.proj-container {
-    display: block;
-    margin: 4.0em auto;
-    text-align: center;
-    padding: 2.0em 5.0em;
-}
-
-.project{
-    /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
-  transition: 0.3s;
-  padding-bottom: 0.5em;
-}
-
-/* On mouse-over, add a deeper shadow */
-.project:hover {
-    box-shadow: 0 16px 32px 0 rgba(0,0,0,0.6);
-}
-
-/* Add some padding inside the card container */
-.proj-info {
-    margin: 0.5em auto;
-}
-
-.myProjects{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-evenly;
-    margin-bottom: 4.0em;
-}
-
-.myProjects a{
-    text-decoration: none;
-    color: black;
-}
-
-.proj-img{
-    width: 500px;
-    height: 500px;
-    /* margin: 0 auto 0.5em; */
-}
-
-.about-info{
-    display: flex;
-    flex-flow: row wrap;
-    margin-bottom: 2.0em;
-}
-
-#projects p, #about p{
-    line-height: 2.0em;
-    margin-top: 0.25em;
-}
-
-.col h3{
-    padding-bottom: 0.5em;
-}
-
-/* resume */
-
-.res-info{
-    text-align: center;
-}
-
-#resume{
-    margin: 4.0em 0;
-    background-color: white;
-}
-
-.resume-header{
-    text-align: center;
-}
-
-.res-dl{
-    display: inline-block;
-    margin-top: 15px;
-    color: blue;
-}
-
-.res-dl:hover{
-    color: #283891;
-    cursor: pointer;
-}
-
-/* timeline  itself*/
-.timeline{
-    position: relative;
-    margin: 50px auto;
-    padding: 0;
-    width: 1000px;
-    box-sizing: border-box;
-}
-
-/* the line */
-.timeline::before{
-    content: '';
-    position: absolute;
-    left: 50%;
-    width: 2px;
-    height: 100%;
-    background: #c5c5c5
-}
-
-/* timeline items */
-.timeline ul{
-    margin: 0;
-    padding: 40px 0;
-}
-
-/* invidual items */
-.timeline ul li{
-    list-style: none;
-    position: relative;
-    width: 50%;
-    padding: 20px 40px;
-    box-sizing: border-box;
-}
-
-/* items on the left side  */
-.timeline ul li:nth-child(odd){
-    float: left;
-    text-align: right;
-    clear: both;
-}
-
-/* items on the right side  */
-.timeline ul li:nth-child(even){
-    float: right;
-    text-align: left;
-    clear: both;
-}
-
-/* each timeline item  */
-.content-tl{
-    padding-bottom: 20px;
-    line-height: 1.5em;
-}
-
-/* the circles */
-.timeline ul li:nth-child(odd)::before{
-    content: '';
-    position: absolute;
-    top: 24px;
-    right: -6px;
-    width: 10px;
-    height: 10px;
-    background: rgba(233, 33, 99, 1);
-    border-radius: 50%;
-    box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.2);
-}
-
-/* the circles */
-.timeline ul li:nth-child(even)::before{
-    content: '';
-    position: absolute;
-    top: 24px;
-    left: -4px;
-    width: 10px;
-    height: 10px;
-    background: rgba(233, 33, 99, 1);
-    border-radius: 50%;
-    box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.2);
-}
-
-/* the title of item in timeline  */
-.timeline ul li h3{
-    margin: 0;
-    padding: 0;
-    font-weight: 600;
-    color: rgba(233, 33, 99, 1);
-}
-
-/* the description of item in timeline  */
-.timeline ul li p{
-    margin: 10px 0 0;
-    padding: 0;
-}
-
-/* the year in the timeline  */
-.timeline ul li .time-tl h4{
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
-}
-
-/* the year in the timeline placed on right */
-.timeline ul li:nth-child(odd) .time-tl{
-    position: absolute;
-    top: 12px;
-    right: -165px;
-    margin: 0;
-    padding: 8px 16px;
-    background: rgba(233, 33, 99, 1);
-    color: #fff;
-    border-radius: 18px;
-    box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.3);;
-}
-
-/* the year in the timeline placed on left */
-.timeline ul li:nth-child(even) .time-tl{
-    position: absolute;
-    top: 12px;
-    left: -165px;
-    margin: 0;
-    padding: 8px 16px;
-    background: rgba(233, 33, 99, 1);
-    color: #fff;
-    border-radius: 18px;
-    box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.3);;
-}
-
-/* about */
-#about{
-    padding: 5px;
-}
-
-.values{
-    margin: 4.0em 0 2.0em;
-}
-
-.value{
-    text-align: left;
-    margin-top: 2.0em;
-}
-
-#about img{
-    height: 300px;
-    width: 300px;
-    border-radius: 50%;
-    margin: 1.0em auto 2.0em;
-}
-
-/* quote */
-.quote{
-    text-align: center;
-    background-color: peachpuff;
-    color: #283891;
-    height: 400px;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.quote h1{
-    font-size: 36px;
-}
-
-/* footer */
+  /* footer  */
 .footer-container {
     display: block;
-    margin: 4.0em auto 1.0em;
+    margin: 0 auto 1.0em;
     text-align: center;
     padding: 2.0em 5.0em;
     background-color: white;
+   
   }
-
+  
   #footer-icon{
     color: black;
     margin: 0 10px;
@@ -546,86 +246,11 @@ figcaption{
   section{
     line-height: 2.0em;
   }
-  
 
-/* Media queries - responsive web design for specific widths */
-/* XXXL */
-@media screen and (max-width: 1600px){
-    /* PROJECTS  */
-    .proj-img{
-        width: 400px;
-        height: 400px;
-    }
-}
-
-/* XXL */
-@media screen and (max-width: 1400px){
-    /* PROJECTS  */
-    .proj-img{
-        width: 350px;
-        height: 350px;
-    }
-}
-
-/* XL */
-@media screen and (max-width: 1200px){
-    /* PROJECTS  */
-    .proj-img{
-        width: 300px;
-        height: 300px;
-    }
-
-    .myProjects{
-        font-size: 14px;
-    }
-}
-
-/* THE NORMAL  */
+  /* THE NORMAL  */
 @media  screen and (max-width: 1000px){
     .navbar a, .navbar .dropdown{
         font-size: 16px;
-    }
-
-    /* timeline width on screen  */
-    .timeline{
-        width: 100%;
-    }
-
-    /* PROJECTS  */
-    .proj-img{
-        width: 400px;
-        height: 400px;
-    }
-
-    .myProjects{
-        flex-flow: column nowrap;
-        justify-content: center;
-        margin-bottom: 0;
-    }
-
-    .project{
-        width: 400px;
-        margin: 0 auto;
-        margin-bottom: 2.0em;
-    }
-
-    .proj-container {
-        padding: 2.0em;
-    }
-
-    /* QUOTE  */
-   
-    .quote h1{
-        font-size: 32px;
-    }
-
-    /* PROCESS  */
-    .about-info h3{
-        text-align: center;
-    }
-
-    .about-info{
-        flex-flow: column nowrap;
     }
 
     /* ETC */
@@ -655,65 +280,6 @@ figcaption{
         font-size: 14px;
     }
 
-    /* PROJECTS */
-    #projects p, #about p, .res-info p{
-        font-size: 14px;
-    }
-
-
-    /* QUOTE  */
-    .quote{
-        height: 300px;
-    }
-    .quote h1{
-        font-size: 24px;
-    }
-
-    /* PROCESS  */
-    
-    /* TIMELINE STUFF / RESUME  */
-    /* the timeline line  */
-
-    /* timeline width on screen  */
-    .timeline{
-        width: 100%;
-        padding-bottom: 0;
-    }
-
-    .timeline::before{
-        left: 20px;
-    }
-
-    /* the timeline items  */
-    .timeline ul li:nth-child(odd),
-    .timeline ul li:nth-child(even){
-        width: 100%;
-        text-align: left;
-        padding-left: 50px;
-        padding-bottom: 50px;
-    }
-
-    /* the circles  */
-    .timeline ul li:nth-child(odd)::before,
-    .timeline ul li:nth-child(even)::before{
-        top: -18px;
-        left: 16px;
-    }
-
-    /* the month/year on item in timeline */
-    .timeline ul li:nth-child(odd) .time-tl,
-    .timeline ul li:nth-child(even) .time-tl{
-        top: -30px;
-        left: 50px;
-        right: inherit;
-    }
-
-    /* ABOUT  */
-    #about img{
-        width: 200px;
-        height: 200px;
-    }
-
     /* ETC  */
     /* BACK TOP BTN  */
     #backTopBtn{
@@ -721,23 +287,10 @@ figcaption{
         height: 65px;
         font-size: 10px;
     }
-
-    /* IMAGES */
-    .uxImg{
-        height: 300px;
-    }
-
-    .stock-img{
-        font-size: 10px;
-    }
 }
 
 /* ADJUSTED SCREEN - SMALL*/
 @media screen and (max-width: 600px){
-    /* HEADER  */
-
-    /* LOGO  */
-
     /* NAVBAR  */
     /* the nav bar iteself  */
     .navbar{
@@ -764,38 +317,6 @@ figcaption{
     .navbar a.icon:hover{
         color: blue;
     }
-
-    /* PROJECTS  */
-
-    .proj-img{
-        width: 400px;
-        height: 400px;
-    }
-
-    .project{
-        width: 400px;
-    }
-
-    #projects p, #about p, .res-info p{
-        font-size: 12px;
-    }
-
-    /* QUOTE  */
-    .quote{
-        height: 200px;
-    }
-
-    .quote h1{
-        font-size: 18px;
-    }
-
-    /* PROCESS  */
-
-    /* RESUME  */
-
-    /* ABOUT  */
-
-    /* ETC  */
 }
 
 /* WIDTH SIZE SMALLEST  */
@@ -803,64 +324,6 @@ figcaption{
     /* HEADER  */
     #header h1{
         font-size: 48px;
-    }
-
-    /* NAVAGATION  */
-
-    /* PROJECTS  */
-    #projects p, #about p{
-        font-size: 12px;
-    }
-
-    .proj-img{
-        width: 350px;
-        height: 350px;
-    }
-
-    .project{
-        width: 350px;
-    }
-
-    .about-info p{
-        text-align: left;
-    }
-
-    /* QUOTE  */
-    .quote h1{
-        font-size: 14px;
-    }
-
-    .quote p{
-        font-size: 12px;
-    }
-    
-    /* PROCESS  */
-
-    /* RESUME  */
-    #resume h1{
-        font-size: 36px;
-    }
-
-    #resume h2{
-        font-size: 18px;
-    }
-
-    /* ABOUT  */
-
-    /* ETC  */
-    
-    /* CONTAINER  */
-    .container, .proj-container{
-        padding: 2.0em 1.5em;
-    }
-
-    /* IMAGES */
-    .uxImg{
-        height: 200px;
-    }
-
-    .stock-img{
-        font-size: 10px;
     }
 }
 
@@ -891,74 +354,8 @@ so they don't overlap */
         width: 75px;
     }
 
-    /* NAVIGATION  */
-
-    /* PROJECTS */
-    .proj-img{
-        width: 300px;
-        height: 300px;
-    }
-
-    .project{
-        width: 300px;
-    }
-
-    /* QUOTE  */
-    .quote h1{
-        font-size: 12px;
-    }
-
-    .quote p{
-        font-size: 10px;
-    }
-
-    /* PROCESS   */
-    
-    /* RESUME  */
-    #resume h1{
-        font-size: 28px;
-    }
-
-    #resume h2{
-        font-size: 14px;
-    }
-
-    .time-tl h4{
-        font-size: 14px;
-    }
-
-    .content-tl h3{
-        font-size: 14px;
-    }
-
-    .content-tl p{
-        font-size: 12px;
-    }
-
-    /* ABOUT  */
-    #about-desc{
-        text-align: left;
-    }
-    /* ETC  */
-
-    /* CONTAINER  */
-    .container{
-        padding: 2.0em 0.5em;
-    }
-
     .footer-container{
         padding: 2.0em 0;
         font-size: 12px;
     }
-    
-    /* DIVIDING SECTIONS  */
-    .uxImg{
-        height: 200px;
-        background-attachment: scroll;
-        background-position: right;
-    }
-
-    .stock-img{
-        font-size: 10px;
-    }  
 }
