--- a/css/hammer.css
+++ b/css/hammer.css
@@ -222,6 +222,7 @@ figcaption{
 
 #concept-vid{
   margin-top: 1.0em;
+  color: blue;
 }
 
 #concept-vid:hover{
@@ -611,7 +612,7 @@ figcaption{
   figcaption{
     text-align: left;
   }
-  
+
   iframe{
     width: 325px;
     height: 300px;
