--- a/css/receipt.css
+++ b/css/receipt.css
@@ -114,9 +114,13 @@
   padding: 4.0em 0 0;
 }
 
-.achievements ul{
+.achievements ul, .takeaway ul{
   width: 95%;
   margin: 1.0em auto 0;
+}
+
+.achievements ul li, .takeaway ul li{
+  margin-top: 1.0em;
 }
 
 .achievements h1{
@@ -288,7 +292,7 @@ figcaption{
   /* BACKGROUND */
 
   /* ACHIEVEMENTS */
-  .achievements ul{
+  .achievements ul .takeaway ul{
     width: 90%;
   }
 
@@ -359,7 +363,7 @@ figcaption{
   }
 
   /* ACHIEVEMENTS */
-  .achievements ul{
+  .achievements ul .takeaway ul{
     font-size: 14px;
     width: 85%;
   }
@@ -468,7 +472,7 @@ figcaption{
   }
 
   /* ACHIEVEMENTS */
-  .achievements ul{
+  .achievements ul .takeaway ul{
     font-size: 12px;
   }
 
@@ -630,7 +634,7 @@ figcaption{
     text-align: left;
   }
 
-  .achievements ul{
+  .achievements ul .takeaway ul{
     width: 75%;
     padding: 0;
   }
