--- a/css/receipt.css
+++ b/css/receipt.css
@@ -118,12 +118,12 @@
   padding: 4.0em 0 0;
 }
 
-.achievements ul, .takeaway ul{
+.achievements ul, .takeaway ul, .research ul{
   width: 95%;
   margin: 1.0em auto 0;
 }
 
-.achievements ul li, .takeaway ul li{
+.achievements ul li, .takeaway ul li, .research ul li{
   margin-top: 1.0em;
 }
 
@@ -137,6 +137,10 @@
   text-align: left;
   line-height: 2.0em;
   padding: 8.0em 0;
+}
+
+.research-insight{
+  margin-top: 3.0em;
 }
 
 /* PERSONA */
@@ -296,7 +300,7 @@ figcaption{
   /* BACKGROUND */
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul{
+  .achievements ul .takeaway ul, .research ul{
     width: 90%;
   }
 
@@ -367,7 +371,7 @@ figcaption{
   }
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul{
+  .achievements ul .takeaway ul, .research ul{
     font-size: 14px;
     width: 85%;
   }
@@ -476,7 +480,7 @@ figcaption{
   }
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul{
+  .achievements ul .takeaway ul, .research ul{
     font-size: 12px;
   }
 
@@ -638,7 +642,7 @@ figcaption{
     text-align: left;
   }
 
-  .achievements ul .takeaway ul{
+  .achievements ul .takeaway ul, .research ul{
     width: 75%;
     padding: 0;
   }
