--- a/css/receipt.css
+++ b/css/receipt.css
@@ -118,12 +118,12 @@
   padding: 4.0em 0 0;
 }
 
-.achievements ul, .takeaway ul, .research ul{
+.achievements ul, .takeaway ul, .research ul, .vision ul{
   width: 95%;
   margin: 1.0em auto 0;
 }
 
-.achievements ul li, .takeaway ul li, .research ul li{
+.achievements ul li, .takeaway ul li, .research ul li, .vision ul li{
   margin-top: 1.0em;
 }
 
@@ -168,7 +168,7 @@ iframe{
   display: block;
   width: 1000px;
   height: 600px;
-  margin: 2.0em auto 0;
+  margin: 4.0em auto 0;
 }
 
 /* MARKET  */
@@ -300,7 +300,7 @@ figcaption{
   /* BACKGROUND */
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul, .research ul{
+  .achievements ul .takeaway ul, .research ul, .vision ul{
     width: 90%;
   }
 
@@ -371,7 +371,7 @@ figcaption{
   }
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul, .research ul{
+  .achievements ul .takeaway ul, .research ul, .vision ul{
     font-size: 14px;
     width: 85%;
   }
@@ -480,7 +480,7 @@ figcaption{
   }
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul, .research ul{
+  .achievements ul .takeaway ul, .research ul, .vision ul{
     font-size: 12px;
   }
 
@@ -642,7 +642,7 @@ figcaption{
     text-align: left;
   }
 
-  .achievements ul .takeaway ul, .research ul{
+  .achievements ul .takeaway ul, .research ul, .vision ul{
     width: 75%;
     padding: 0;
   }
