--- a/css/receipt.css
+++ b/css/receipt.css
@@ -92,6 +92,10 @@
   margin-bottom: 2.0em;
 }
 
+#extra-para-top{
+  margin-top: 2.0em;
+}
+
 .role{
   margin-left: 6.0em;
 }
@@ -118,12 +122,12 @@
   padding: 4.0em 0 0;
 }
 
-.achievements ul, .takeaway ul, .research ul, .vision ul{
+.bullet-list{
   width: 95%;
   margin: 1.0em auto 0;
 }
 
-.achievements ul li, .takeaway ul li, .research ul li, .vision ul li{
+.bullet-list li{
   margin-top: 1.0em;
 }
 
@@ -300,7 +304,7 @@ figcaption{
   /* BACKGROUND */
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul, .research ul, .vision ul{
+  .bullet-list{
     width: 90%;
   }
 
@@ -371,7 +375,7 @@ figcaption{
   }
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul, .research ul, .vision ul{
+  .bullet-list{
     font-size: 14px;
     width: 85%;
   }
@@ -480,7 +484,7 @@ figcaption{
   }
 
   /* ACHIEVEMENTS */
-  .achievements ul .takeaway ul, .research ul, .vision ul{
+  .bullet-list{
     font-size: 12px;
   }
 
@@ -642,7 +646,7 @@ figcaption{
     text-align: left;
   }
 
-  .achievements ul .takeaway ul, .research ul, .vision ul{
+  .bullet-list{
     width: 75%;
     padding: 0;
   }
