--- a/css/hammer.css
+++ b/css/hammer.css
@@ -162,6 +162,15 @@
   padding: 8.0em 0;
 }
 
+.personal a{
+  color: blue;
+}
+
+.persona a:hover{
+  color: #283891;
+  cursor: pointer;
+}
+
 /* STATEMENT */
 .statement{
   text-align: left;
